--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -1,1 +1,119 @@
-<?xml version="1.0" encoding="utf-8"?><Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">  <PropertyGroup>    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>    <ProductVersion>9.0.21022</ProductVersion>    <SchemaVersion>2.0</SchemaVersion>    <ProjectGuid>{E19B7237-4AB1-4700-AEAB-E52B301EC942}</ProjectGuid>    <OutputType>Library</OutputType>    <RootNamespace>UnitTests</RootNamespace>    <AssemblyName>tests</AssemblyName>    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>  </PropertyGroup>  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">    <DebugSymbols>true</DebugSymbols>    <DebugType>full</DebugType>    <Optimize>true</Optimize>    <OutputPath>.</OutputPath>    <ErrorReport>prompt</ErrorReport>    <WarningLevel>4</WarningLevel>    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>    <Execution>      <Execution clr-version="Net_2_0" xmlns="" />    </Execution>  </PropertyGroup>  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">    <DebugType>none</DebugType>    <Optimize>true</Optimize>    <OutputPath>.</OutputPath>    <ErrorReport>prompt</ErrorReport>    <WarningLevel>4</WarningLevel>    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>    <Execution>      <Execution clr-version="Net_2_0" xmlns="" />    </Execution>  </PropertyGroup>  <ItemGroup>    <Compile Include="fixtures\Helpers.cs" />    <Compile Include="fixtures\TagLib.Tests.Performance\PerformanceTest.cs" />    <Compile Include="fixtures\TagLib.Tests.Collections\StringCollectionTest.cs" />    <Compile Include="fixtures\TagLib.Tests.Collections\ByteVectorTest.cs" />    <Compile Include="fixtures\TagLib.Tests.Collections\ByteVectorCollectionTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\AacFormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\AsfFormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3BothFormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\M4aFormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\MpcFormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3V2FormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3V24FormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\OggFormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3V1FormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\IFormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\FlacFormatTest.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\StandardTests.cs" />    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\Id3V2Test.cs" />    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\InfoTagTest.cs" />    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\ApeTest.cs" />    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\Id3V1Test.cs" />    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\XiphTest.cs" />    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\DivXTest.cs" />    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\AsfTest.cs" />    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\MovieIdTagTest.cs" />    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\Mpeg4Test.cs" />    <Compile Include="fixtures\TagLib.Tests.FileFormats\AiffFormatTest.cs" />  </ItemGroup>  <ItemGroup>    <Reference Include="nunit.core, Version=2.2.0.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />    <Reference Include="nunit.framework, Version=2.2.0.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />  </ItemGroup>  <ItemGroup>    <ProjectReference Include="..\src\taglib-sharp.csproj">      <Project>{6B143A39-C7B2-4743-9917-92262C60E9A6}</Project>      <Name>taglib-sharp</Name>      <Private>False</Private>    </ProjectReference>  </ItemGroup>  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />  <ProjectExtensions>    <MonoDevelop>      <Properties xmlns="">        <MonoDevelop.Autotools.MakefileInfo RelativeMakefileName="Makefile.am" IsAutotoolsProject="true" RelativeConfigureInPath="..">          <BuildFilesVar Sync="true" Name="ASSEMBLY_CSFILES" />          <DeployFilesVar />          <ResourcesVar />          <OthersVar />          <GacRefVar />          <AsmRefVar />          <ProjectRefVar />        </MonoDevelop.Autotools.MakefileInfo>      </Properties>    </MonoDevelop>  </ProjectExtensions></Project>
+<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProductVersion>8.0.50727</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{4D1C6110-D6F2-496E-BD7E-E45B7217D458}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>tests</RootNamespace>
+    <AssemblyName>tests</AssemblyName>
+    <ReleaseVersion>2.0.3.3</ReleaseVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>.</OutputPath>
+    <DefineConstants>DEBUG</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>none</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>.</OutputPath>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="nunit.core, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
+    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
+    <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="fixtures\Helpers.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Collections\ByteVectorCollectionTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Collections\ByteVectorTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Collections\FileTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Collections\StringCollectionTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\AacFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\AiffFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\AsfFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\AviFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\FlacFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3BothFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3V1FormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3V2FormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\IFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\JpegFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\M4aFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\MpcFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\OggFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\StandardTests.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\TiffFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\AddImageMetadataTests.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegCanonZoombrowserTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegNikon1Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegNikon2Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegNikon3Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegNikon4Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegNoMetadataTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegOlympus1Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegOlympus2Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegOlympus3Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegPanasonicTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegSegmentSizeTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegSony1Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegSony2Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegTangledTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\RationalTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffXmpTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Utils.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\CommentModificationValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\ImageTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\IMetadataInvariantValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\IMetadataModificationValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\KeywordsModificationValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\NoModificationValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\TagCommentModificationValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\TagKeywordsModificationValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\XapTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\XmpCrashTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\XmpSpecTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Performance\PerformanceTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\ApeTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\AsfTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\DivXTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\Id3V1Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\Id3V2Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\InfoTagTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\MovieIdTagTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\Mpeg4Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.TaggingFormats\XiphTest.cs" />
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties InternalTargetFrameworkVersion="3.5">
+        <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="true" RelativeMakefileName="Makefile.am" BuildTargetName="build" IsAutotoolsProject="true" RelativeConfigureInPath="..">
+          <BuildFilesVar Sync="true" Name="ASSEMBLY_CSFILES" />
+          <DeployFilesVar />
+          <ResourcesVar />
+          <OthersVar />
+          <GacRefVar />
+          <AsmRefVar />
+          <ProjectRefVar />
+        </MonoDevelop.Autotools.MakefileInfo>
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
+  <ItemGroup>
+    <ProjectReference Include="..\taglib-sharp.csproj">
+      <Project>{4CC18776-125E-4318-9D24-D60110AD9697}</Project>
+      <Name>taglib-sharp</Name>
+    </ProjectReference>
+  </ItemGroup>
+</Project>
