2010-03-20  Alexander Kojevnikov <alexander@kojevnikov.com>
	* Makefile.am:
	* src/Makefile.am: Fix `make distcheck`

svn path=/trunk/taglib-sharp/; revision=153931

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,7 @@ EXTRA_DIST =             \
    $(pkgconfig_in_files) \
    taglib-sharp.snk \
    taglib-sharp.csproj \
-   taglib-sharp.mds
+   taglib-sharp.sln
 
 DISTCLEANFILES = taglib-sharp.pc
 
