Add Validator to test removal of tags from files
A new Validator for the image tests is added which can be used to
test if tags are correctly removed from files.

https://bugzilla.gnome.org/show_bug.cgi?id=619432

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -65,6 +65,7 @@ ASSEMBLY_CSFILES =  \
 	fixtures/TagLib.Tests.Images/Validators/IMetadataModificationValidator.cs \
 	fixtures/TagLib.Tests.Images/Validators/KeywordsModificationValidator.cs \
 	fixtures/TagLib.Tests.Images/Validators/NoModificationValidator.cs \
+	fixtures/TagLib.Tests.Images/Validators/RemoveMetadataValidator.cs \
 	fixtures/TagLib.Tests.Images/Validators/TagCommentModificationValidator.cs \
 	fixtures/TagLib.Tests.Images/Validators/TagKeywordsModificationValidator.cs \
 	fixtures/TagLib.Tests.Images/XapTest.cs \
