Add tests for PNG support
This commit adds a bunch of tests for the PNG support. The sample files
are created with GIMP and modified with exiftool.

https://bugzilla.gnome.org/show_bug.cgi?id=619921

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -52,6 +52,8 @@ ASSEMBLY_CSFILES =  \
 	fixtures/TagLib.Tests.Images/JpegTangledTest.cs \
 	fixtures/TagLib.Tests.Images/NullOrientationTest.cs \
 	fixtures/TagLib.Tests.Images/RationalTest.cs \
+	fixtures/TagLib.Tests.Images/PngGimpTest.cs \
+	fixtures/TagLib.Tests.Images/PngGimpPngcrushTest.cs \
 	fixtures/TagLib.Tests.Images/TiffCanonBibble516BitTest.cs \
 	fixtures/TagLib.Tests.Images/TiffCanonBibble58BitTest.cs \
 	fixtures/TagLib.Tests.Images/TiffCanonDpp16BitTest.cs \
