Add metadata copying between images.
Only copies the values from ImageTag. Good enough.

https://bugzilla.gnome.org/show_bug.cgi?id=618770

--- a/src/taglib-sharp.csproj
+++ b/src/taglib-sharp.csproj
@@ -26,6 +26,7 @@
     <Execution>
       <Execution clr-version="Net_2_0" />
     </Execution>
+    <DefineConstants>HAVE_SHARPZIPLIB</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -259,6 +260,7 @@
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
+    <Reference Include="ICSharpCode.SharpZipLib" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
