Add Sony ARW support.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -97,7 +97,8 @@ ASSEMBLY_CSFILES =  \
 	fixtures/TagLib.Tests.TaggingFormats/XiphTest.cs
 
 RAW_CSFILES = \
-	fixtures/TagLib.Tests.Images/Cr2Canon400d1Test.cs
+	fixtures/TagLib.Tests.Images/Cr2Canon400d1Test.cs \
+	fixtures/TagLib.Tests.Images/ArwSonyA700Test.cs
 
 if HAVE_SHARPZIPLIB
     SHARPZIPLIB_FLAGS = -r:ICSharpCode.SharpZipLib.dll -define:HAVE_SHARPZIPLIB
