--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -98,7 +98,8 @@ ASSEMBLY_CSFILES =  \
 
 RAW_CSFILES = \
 	fixtures/TagLib.Tests.Images/Cr2Canon400d1Test.cs \
-	fixtures/TagLib.Tests.Images/ArwSonyA700Test.cs
+	fixtures/TagLib.Tests.Images/ArwSonyA700Test.cs \
+	fixtures/TagLib.Tests.Images/DngLeicaM8Test.cs
 
 if HAVE_SHARPZIPLIB
     SHARPZIPLIB_FLAGS = -r:ICSharpCode.SharpZipLib.dll -define:HAVE_SHARPZIPLIB
