Refuse to write files with unknown corruptions.
Certain Nikon files can have strange corruptions which we're not sure
how to parse (nor do other metadata libraries). This may be a bug or a
feature. We detect it and refuse to write in such cases.

https://bugzilla.gnome.org/show_bug.cgi?id=624097

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -33,6 +33,7 @@ ASSEMBLY_CSFILES =  \
 	fixtures/TagLib.Tests.Images/GifExiftoolTangled3Test.cs \
 	fixtures/TagLib.Tests.Images/GifExiftoolTest.cs \
 	fixtures/TagLib.Tests.Images/GifGimpTest.cs \
+	fixtures/TagLib.Tests.Images/JpegBGO624097Test.cs \
 	fixtures/TagLib.Tests.Images/JpegCanonBibble5Test.cs \
 	fixtures/TagLib.Tests.Images/JpegCanonZoombrowserTest.cs \
 	fixtures/TagLib.Tests.Images/JpegNikon1Bibble5Test.cs \
