[IFD] Fix parsing with non-null delimited strings.
There was an interesting off-by-one parsing error for strings that were
not delimited by a null byte. This commit makes sure we read the entire
byte array and then cut of everything up to the null byte.

https://bugzilla.gnome.org/show_bug.cgi?id=493530

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -26,6 +26,7 @@ ASSEMBLY_CSFILES =  \
 	fixtures/TagLib.Tests.FileFormats/OggFormatTest.cs \
 	fixtures/TagLib.Tests.FileFormats/StandardTests.cs \
 	fixtures/TagLib.Tests.Images/AddImageMetadataTests.cs \
+	fixtures/TagLib.Tests.Images/BGO493530Test.cs \
 	fixtures/TagLib.Tests.Images/CopyFromTest.cs \
 	fixtures/TagLib.Tests.Images/EmptyCommentTest.cs \
 	fixtures/TagLib.Tests.Images/GifExiftoolLongCommentTest.cs \
