Add Leica .RAW support.
https://bugzilla.gnome.org/show_bug.cgi?id=622104

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -109,6 +109,7 @@ RAW_CSFILES = \
 	fixtures/TagLib.Tests.Images/ImageTagTests.cs \
 	fixtures/TagLib.Tests.Images/NefNikonD90Test.cs \
 	fixtures/TagLib.Tests.Images/PefPentaxKd10Test.cs \
+	fixtures/TagLib.Tests.Images/RawLeicaDigilux2Test.cs \
 	fixtures/TagLib.Tests.Images/Rw2PanasonicG1Test.cs
 
 if HAVE_SHARPZIPLIB
