Add test for broken CR2 file.
https://bugzilla.gnome.org/show_bug.cgi?id=633972

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -108,6 +108,7 @@ ASSEMBLY_CSFILES =  \
 
 RAW_CSFILES = \
 	fixtures/TagLib.Tests.Images/ArwSonyA700Test.cs \
+	fixtures/TagLib.Tests.Images/BGO633972Test.cs \
 	fixtures/TagLib.Tests.Images/Cr2Canon400d1Test.cs \
 	fixtures/TagLib.Tests.Images/DngLeicaM8Test.cs \
 	fixtures/TagLib.Tests.Images/ImageTagTests.cs \
