Update NEWS etc for 2.0.4.0 release

--- a/Makefile.am
+++ b/Makefile.am
@@ -57,8 +57,8 @@ distwin: all
 	zip -9 -r $(srcdir)/$(WINDIR).zip $(srcdir)/$(WINDIR)
 	rm -rf $(srcdir)/$(WINDIR)
 
-UPLOAD_HOST = "$$BANSHEE_USER@download.banshee-project.org"
-UPLOAD_PATH = "download.banshee-project.org/taglib-sharp"
+UPLOAD_HOST = "$$BANSHEE_USER@download.banshee.fm"
+UPLOAD_PATH = "download.banshee.fm/taglib-sharp"
 push-release: distcheck distwin
 	[[ -z "$$BANSHEE_USER" ]] && { echo "Set BANSHEE_USER"; exit 1; } || true
 	[[ -z "$$MONO_USER" ]] && { echo "Set MONO_USER"; exit 1; } || true
@@ -67,13 +67,10 @@ push-release: distcheck distwin
 	mv $(PACKAGE)-$(VERSION).tar.* release
 	cp ChangeLog release/$(PACKAGE)-$(VERSION).changes
 	cp NEWS release/$(PACKAGE)-$(VERSION).news
-	pushd release; sha1sum * > $(PACKAGE)-$(VERSION).sha1sum; popd
+	pushd release; sha256sum * > $(PACKAGE)-$(VERSION).sha256sum; popd
 	scp -r release $(UPLOAD_HOST):$(UPLOAD_PATH)/$(VERSION)
 	rm -rf release
 	ssh $(UPLOAD_HOST) rm -f $(UPLOAD_PATH)/LATEST-IS\*
 	ssh $(UPLOAD_HOST) touch $(UPLOAD_PATH)/LATEST-IS-$(VERSION)
-	svn cp \
-		-m "Tag for $(PACKAGE) release $(VERSION)" \
-		svn+ssh://$$MONO_USER@mono-cvs.ximian.com/source/trunk/taglib-sharp \
-		svn+ssh://$$MONO_USER@mono-cvs.ximian.com/source/tags/taglib-sharp-$(VERSION)
-
+	git tag -a -m "Tag for taglib-sharp release ${VERSION}" taglib-sharp-${VERSION} || bail "Could not create tag"
+	git push origin taglib-sharp-${VERSION} || bail "Failed to push tag to remote"
