build: Remove IntList, copy README/AUTHORS in distwin

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,6 @@ pkgconfig_DATA = $(pkgconfig_in_files:.pc.in=.pc)
 EXTRA_DIST =             \
    $(pkgconfig_in_files) \
    taglib-sharp.snk \
-   taglib-sharp.csproj \
    taglib-sharp.sln
 
 DISTCLEANFILES = taglib-sharp.pc
@@ -49,7 +48,8 @@ distwin: all
 	cp $(srcdir)/NEWS $(srcdir)/$(WINDIR)/NEWS.txt
 	cp $(srcdir)/ChangeLog $(srcdir)/$(WINDIR)/ChangeLog.txt
 	cp $(srcdir)/COPYING $(srcdir)/$(WINDIR)/COPYING.txt
-	cp $(srcdir)/taglib-sharp.csproj $(srcdir)/$(WINDIR)/taglib-sharp.csproj
+	cp $(srcdir)/README $(srcdir)/$(WINDIR)/README.txt
+	cp $(srcdir)/AUTHORS $(srcdir)/$(WINDIR)/AUTHORS.txt
 	if [ -e $(srcdir)/windows-files ];					\
 	  then cp -r $(srcdir)/windows-files/* $(srcdir)/$(WINDIR);		\
 	fi
